--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,9 @@ nltk==3.5
 wordcloud==1.5.0
 textblob==0.15.3
 kmodes==0.11.0
-
+spacy==3.0.5
+pyLDAvis==3.2.2
+tqdm==4.59.0
+nltk==3.5
+wordcloud==1.8.1
+textblob==0.15.3
